<resources>
    <string name="app_name">EVStationOperatorApp</string>
    <string name="app_logo_description">EV Charging Station App Logo</string>
    <string name="station_operator_login">Station Operator Login</string>
    <string name="username_email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="scan_booking_qr_code">Scan QR code</string>
    <string name="logout">Logout</string>
    <string name="booking_details">Booking Details</string>
    <string name="booking_id_label">Booking ID</string>
    <string name="ev_owner_name_label">Owner Name</string>
    <string name="reservation_time_label">Reservation Time</string>
    <string name="station_location_label">Station Location</string>
    <string name="status_label">Status</string>
    <string name="confirm_and_finalize_session">Finalize Booking</string>
    <string name="owner_vehicle_details">Vehicle Details</string>
    <string name="booking_information">Booking Information</string>

    <!-- Add these inside your <resources> tag -->
    <string name="instructions_title">How to Use</string>
    <string name="instruction_step_1">Tap the button to scan the customer\'s QR code.</string>
    <string name="instruction_step_2">Verify the booking details on the next screen.</string>
    <string name="instruction_step_3">Finalize the session after charging is complete.</string>
</resources>